# homework

./: .flake8  README.md
requerments/: .flake8  pyproject.toml
requirements/: requirements.txt
scr/: masks.py  proccesing.py  processing.py  widget.py
src/: masks.py  processing.py  widget.py
