[project]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.isort]
line_length = 119

[tool.mypy]
exclude = 'venv'
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true

[tool.black]
line-length = 119
exclude = '''
(
    /(
        \.eggs # Исключить несколько общих каталогов
        | \.git # в корне проекта
        | \.mypy_cache
        | \.venv
     )/
    | foo.py # Также отдельно исключить файл с именем foo.py
)           # в корне проекта
...
